added top k sampling to generate method

--- a/poetron.ipynb
+++ b/poetron.ipynb
@@ -274,18 +274,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "d509b186",
    "metadata": {},
    "outputs": [],
    "source": [
     "# starting with empty poems\n",
-    "poems = p.generate(['', '', ''], max_new_tokens=180, postprocess=True)"
+    "poems = p.generate(['', '', ''], max_new_tokens=180, postprocess=True, top_k=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "88270e66",
    "metadata": {},
    "outputs": [
@@ -293,9 +293,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "speech on everything\n",
-      "turns for some decent old lives\n",
-      "rec are on the trip\n"
+      "in a long morning\n",
+      "i will not wait to you\n",
+      "i am not alone\n"
      ]
     }
    ],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "be672641",
    "metadata": {},
    "outputs": [
@@ -313,9 +313,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the dumpster that shows\n",
-      "we shared comes reality\n",
-      "emerald solitude\n"
+      "a haiku of time\n",
+      "i will never feel better\n",
+      "it's just been so cool\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "2ad89490",
    "metadata": {},
    "outputs": [
@@ -333,9 +333,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to come away moves\n",
-      "you instant little perfume\n",
-      "godly spring language\n"
+      "i can go to you\n",
+      "a new day i'll have to love\n",
+      "but it is my life\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "98ed2e0f",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "b58275f8",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,13 @@
      "output_type": "stream",
      "text": [
       "INFO:Poetron_Logger:Loaded tokenizer from ./poetron_save_dir/tokenizer.pkl\n",
-      "INFO:Poetron_Logger:Instantiating model...\n",
+      "INFO:Poetron_Logger:Instantiating model...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "INFO:Poetron_Logger:Instantiated model\n",
       "INFO:Poetron_Logger:Model has 6.71649M parameters\n",
       "INFO:Poetron_Logger:Loaded model parameters and buffers from ./poetron_save_dir/model_state_dict.pth\n"
@@ -390,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 38,
    "id": "05d4d43d",
    "metadata": {},
    "outputs": [],
@@ -400,12 +406,12 @@
     "    '<poem_start>on a warm summer day',\n",
     "    '<poem_start>over the mountains',\n",
     "    '<poem_start>snowfall outside the window'],\n",
-    "    max_new_tokens=180, postprocess=True)"
+    "    max_new_tokens=180, postprocess=True, top_k=8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 39,
    "id": "fb3d1701",
    "metadata": {},
    "outputs": [
@@ -414,8 +420,8 @@
      "output_type": "stream",
      "text": [
       "on a warm summer day\n",
-      "the shadow drifts one in debt\n",
-      "i'll set through the dark\n"
+      "the wind in a cold night\n",
+      "my life's time of mine\n"
      ]
     }
    ],
@@ -425,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 40,
    "id": "3e701ef4",
    "metadata": {},
    "outputs": [
@@ -434,8 +440,8 @@
      "output_type": "stream",
      "text": [
       "over the mountains\n",
-      "swivel orange peonies deepen\n",
-      "not the most members\n"
+      "the wind in the wind and the\n",
+      "last day that is here\n"
      ]
     }
    ],
@@ -445,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 41,
    "id": "6fff5304",
    "metadata": {},
    "outputs": [
@@ -454,8 +460,8 @@
      "output_type": "stream",
      "text": [
       "snowfall outside the window\n",
-      "watch peace and your investing\n",
-      "says i'm not feeling you\n"
+      "in the cold wind of the rain\n",
+      "a little new year\n"
      ]
     }
    ],
