--- a/poetron.ipynb
+++ b/poetron.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Poetron\n",
     "\n",
-    "Poetron is an AI system that uses a custom generative pretrained transformer (GPT) model for writing short poems.\n",
+    "Poetron is an AI system that uses a custom generative pretrained transformer (GPT) model to write short poems.\n",
     "\n",
     "Check it out below!"
    ]
